imagen de encabezado mejorado

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <nav class="nav-main">
-            <img src="img/brand.png" alt="TechNews LOGO" class="nav-main">
+            <img src="img/brand.png" alt="TechNews LOGO" class="nav-brand">
             <ul class ="nav-menu">
                 <li>
                     <a href="#" >Web Develompment </a>
