encabezado mejorado y header agredado

--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
 
 
         </nav>
-
+        <hr>
+        <!-- showcase-->
+        <header class="showcase">
+        <h2>Big News Today</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis earum facilis sed itaque omnis dolorem. Quasi expedita explicabo impedit rerum ad, laborum soluta nulla dolores beatae fuga maxime culpa sint.</p>
+    </header>
 
     </div>
     
